--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -4,6 +4,7 @@
 @import abstracts/mixins
 
 @import base/reset
+@import base/fvreset
 @import base/typography
 
 @import layout/navigation
@@ -24,3 +25,8 @@
 @import pages/politician
 
 @import themes/base
+
+// VENDORS
+
+@fa-font-path:  "font"
+@import vendor/font-awesome/font-awesome
