--- a/src/sass/components/_sections.sass
+++ b/src/sass/components/_sections.sass
@@ -1,6 +1,7 @@
 $section-bgcolor: $color-white
 $section-gradient-white: $color-white
 $section-gradient-black: $color-black
+$section-bordertop-color: $color-light-grey
 
 .section
   padding: rem-calc(100px 320px)
@@ -10,3 +11,9 @@ $section-gradient-black: $color-black
     padding: 0
   &--fancy
     background-image: linear-gradient(-180deg, rgba($section-gradient-white,0) 0%, rgba($section-gradient-black, 0.1) 100%)
+  &--small
+    padding-top: 34px
+    padding-bottom: 44px
+    height: 15px
+  &--bordertop
+    border-top: solid 1px $section-bordertop-color
